@@ -331,7 +331,7 @@
 }
 
 .right-pane {
- min-width:0px!important;
+ min-width:400px!important;
 }
 
 .left-pane {
